--- a/main/templates/new_project.html
+++ b/main/templates/new_project.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load bootstrap3 %}
 {% block content %}
 
 <div class="container">
@@ -9,7 +9,7 @@
             <br\><br\><br\><br\>
             <form action="" enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
-                {{ form }}
+                {% bootstrap_form form %}
                 <input type = 'submit' class='btn btn-default' value='Post Project'/>                
             </form>
         </div>
