--- a/main/templates/project_detail.html
+++ b/main/templates/project_detail.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load urlify %}
 
 {% block head_title %}
 {{ instance.title}} | {{ block.super }}
@@ -26,10 +25,13 @@
 <div class='row'>
     <div class='col-sm-12'>
     
-    {{ instance.content | linebreaks }}
+    {{ instance.description | linebreaks }}
 
-    <button type="button"> <a href='{% url "posts:update" instance.slug %}' class ="btn btn-success">Edit</a></button>
-    <button type="button"> <a href='{% url "posts:delete" instance.slug %}' class ="btn btn-danger" onclick="return confirm('Are you sure you want to delete this post?')">Delete</a></button>
+    <button type="button"> <a href='{{ instance.link }}' class ="btn btn-success">Project</a></button>
+
+    <button type="button"> <a href='{% url "main:update" instance.slug %}' class ="btn btn-success">Edit</a></button>
+    
+    <button type="button"> <a href='{% url "main:delete" instance.slug %}' class ="btn btn-danger" onclick="return confirm('Are you sure you want to delete this post?')">Delete</a></button>
 
     
     <hr/>
