--- a/main/templates/project_list.html
+++ b/main/templates/project_list.html
@@ -22,12 +22,10 @@
                   {% if obj.user.get_full_name %}
                   <p>Author: {{ obj.user.get_full_name }}</p>
                   {% endif %}
-                  <p>{{ obj.content | linebreaks | truncatechars:120 }}</p>
+                  <p>{{ obj.description | linebreaks | truncatechars:120 }}</p>
                   
                   <button type="button"> <a href='{{ obj.get_absolute_url }}' class ="btn btn-info">Read More</a></button>
-                  <!-- <button type="button"> <a href='{% url "posts:update" obj.slug %}' class ="btn btn-success">Edit</a></button>
-                  <button type="button"> <a href='{% url "posts:delete" obj.slug %}' class ="btn btn-danger">Delete</a></button> -->
-
+                  
                 </div>
               </div>
             </div>
