--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}"/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital@1&display=swap" rel="stylesheet">
 
     <style>
         /* {% block style %} {% endblock %} */
