--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -4,7 +4,6 @@
         <a href="{% url 'main:home' %}" class="logo">TWB</a>
       </div>
       <header>
-        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
           <div class="container-fluid">
         
@@ -54,8 +53,8 @@
       </header>
       
       <div class="info">
-        <h2 class="mb-3">THE WANDERER BLOG</h2>
-        <h3 class="mb-3">A Place For Every Wanderer At Heart To Share With Fellow Wanderers</h3>
+        <h2 class="mb-3">PROJECTS</h2>
+        <h3 class="mb-3">Project Ratings</h3>
       </div>
     </div>
   </div>
