--- a/main/templates/project_detail.html
+++ b/main/templates/project_detail.html
@@ -15,7 +15,7 @@
     {% endif %}
 
 {% if instance.user.get_full_name %}
-<p>Author: {{ instance.user.get_full_name }}</p>
+<p>Posted by: {{ instance.user.get_full_name }}</p>
 {% endif %}
 
 <p><div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
