--- a/main/templates/project_list.html
+++ b/main/templates/project_list.html
@@ -22,9 +22,9 @@
                   {% if obj.user.get_full_name %}
                   <p>Author: {{ obj.user.get_full_name }}</p>
                   {% endif %}
-                  <p>{{ obj.description | linebreaks | truncatechars:120 }}</p>
+                  <!-- <p>{{ obj.description | linebreaks | truncatechars:120 }}</p> -->
                   
-                  <button type="button"> <a href='{{ obj.get_absolute_url }}' class ="btn btn-info">Read More</a></button>
+                  <!-- <button type="button"> <a href='{{ obj.get_absolute_url }}' class ="btn btn-info">Read More</a></button> -->
                   
                 </div>
               </div>
