profile view function

--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -25,6 +25,8 @@
                   <li>
                     <a href="{% url 'main:logout' %}">Logout</a>
                   </li>
+                  <a class="nav-item nav-link" href="{% url 'main:profile' %}">Profile</a>
+
               
             </ul>
             {% else %}
