--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
+{% load bootstrap3 %}
+
 {% block content %}
+<div class="container">
     <div class="content-section">
         <div class="media">
             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -11,4 +14,5 @@
         </div>
         <!-- FORM HERE -->
     </div>
+</div>
 {% endblock %}
