--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -2,3 +2,12 @@ body {
     font-family: 'Zilla Slab', serif;
 }
 
+/* ul {
+    account-img {
+        height: 125px;
+        width: 125px;
+        margin-right: 20px;
+        margin-bottom: 16px;
+      }
+      
+} */
