fixed login, new post and profile saving bugs

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'js/base.js' %}"/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
 
     <style>
         /* {% block style %} {% endblock %} */
