--- a/main/templates/project_detail.html
+++ b/main/templates/project_detail.html
@@ -14,8 +14,8 @@
     <img src='{{ instance.image.url }}' class='img-responsive'/>
     {% endif %}
 
-{% if instance.user.get_full_name %}
-<p>Posted by: {{ instance.user.get_full_name }}</p>
+{% if instance.user.username %}
+<p>Posted by: {{ instance.user.username }}</p>
 {% endif %}
 
 <p><div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
