--- a/main/templates/project_list.html
+++ b/main/templates/project_list.html
@@ -21,10 +21,11 @@
                 {% endif %}
                 <div class="caption">
                   <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/><small>{{ obj.publish}}</small></h3>
-                  <!-- <img class="rounded-circle z-depth-2" src="{{ obj.user.profile.image.url }}"> -->
-                  {% if obj.user.get_full_name %}
-                  <p>Author: {{ obj.user.get_full_name }}</p>
+
+                  {% if obj.user.get_username %}
+                  <p>By: {{ obj.user.get_username }}</p>
                   {% endif %}
+                  
                   <!-- <p>{{ obj.description | linebreaks | truncatechars:120 }}</p> -->
                   
                   <!-- <button type="button"> <a href='{{ obj.get_absolute_url }}' class ="btn btn-info">Read More</a></button> -->
