edited welcome page

--- a/main/templates/welcome.html
+++ b/main/templates/welcome.html
@@ -2,6 +2,50 @@
 
 {% block content %}
 
+<div class="row">
+            <div class="column">
+              <div class="content">
+                <img src="https://www.awwwards.com/awards/gallery/2015/11/be-careful-trends-awwwards-09.png" style="width:100%">
+              </div>
+            </div>
+
+            <br>
+
+            <div class="column">
+              <div class="content">
+                <img src="https://lh3.googleusercontent.com/8seoTXGoSEBi8CtDHnlitotqdvLjmy_nrLtrS9vGxWELcy8abKDKWw10rpRipd2V4DLlIHHviaa1e-baVpy97pICL5w=w640-h400-e365-rj-sc0x00ffffff" style="width:100%">
+              </div>
+            </div>
+
+            <br>
+
+            <div class="column">
+              <div class="content">
+                <img src="https://themezaa.b-cdn.net/wp-content/uploads/2014/06/Awwwards-Nominee-1.jpg" style="width:100%">
+              </div>
+            </div>
+
+            <br>
+
+            <div class="column">
+              <div class="content">
+                <img src="https://blog.hubspot.com/hs-fs/hubfs/1917%20homepage.png?width=2790&name=1917%20homepage.png" style="width:100%">
+              </div>
+            </div>
+          </div>
+
+          <br>
+
+          <div class="row">
+            <div class="column">
+              <div class="content">
+                <img src="https://codecondo.com/wp-content/uploads/2015/07/Awwwards.png" style="width:100%">
+              </div>
+            </div>
+
+            <br>
+          </div>
+        </div>
 
   
 {% endblock %}
