--- a/main/templates/project_list.html
+++ b/main/templates/project_list.html
@@ -21,11 +21,7 @@
                 {% endif %}
                 <div class="caption">
                   <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/><small>{{ obj.publish}}</small></h3>
-
-                  {% if obj.user.get_username %}
-                  <p>By: {{ obj.user.get_username }}</p>
-                  {% endif %}
-                  
+                  <!-- <p>By: {{ profile.user.username }}</p>                   -->
                   <!-- <p>{{ obj.description | linebreaks | truncatechars:120 }}</p> -->
                   
                   <!-- <button type="button"> <a href='{{ obj.get_absolute_url }}' class ="btn btn-info">Read More</a></button> -->
