--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,85 +1,19 @@
-<!-- <div class="container-fluid">
-    <div class="header">
-      <div class="sides">
-        <a href="{% url 'main:home' %}" class="logo">TWB</a>
-      </div>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-          <div class="container-fluid">
-        
-            <div class="collapse navbar-collapse" id="navbarExample01">
-              <div class="col-sm-4 col-md-4 navbar-right">
-    
-        </div>
-        
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'main:home' %}">Home</a></li>
-            <li><a href="{% url 'main:list' %}">Projects</a></li>
-
-            {% if user.is_authenticated %}
-      
-                  <li>
-                    <a href="{% url 'main:create' %}">Create Post</a>
-                  </li>
-                  <li>
-                    <a href="{% url 'main:profile' %}">{{ user.username }}</a>
-                  </li>
-                  <li>
-                    <a href="{% url 'main:logout' %}">Logout</a>
-                  </li>
-              
-            </ul>
-            {% else %}
-            <li>
-              <a href="{% url 'main:signin' %}">Login</a>
-            </li>
-            
-            <li>
-              <a href="{% url 'main:signup' %}">Sign Up</a>
-            </li>
-            {% endif %}
-          </ul>
-          
-          <div class="input-group">
-            <form method="GET" action="">
-              <input type="text" name="q" placeholder="Search..." value="{{ request.GET.q }}"/>
-              <input type="submit" value="Search"/>             
-            </form>
-          </div>
-  
-      </form>
-        </div>
-            </div>
-          </div>
-        </nav>
-      </header>
-      
-      <div class="info">
-        <h2 class="mb-3">PROJECTS</h2>
-        <h3 class="mb-3">Project Ratings</h3>
-      </div>
-    </div>
-  </div>
-
-   -->
-
-   <div class="header">
+<div class="header">
     <div class="sides">
       <a href="{% url 'main:home' %}" class="logo">AWWWARDS</a>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
     
         <div class="collapse navbar-collapse" id="navbarExample01">
-          <div class="col-sm-4 col-md-4 navbar-right">
+          <!-- <div class="col-sm-4 col-md-4 navbar-right">
 
-    </div>
+    </div> -->
     
-    <div class="collapse navbar-collapse">
+    <div class="">
       <ul class="nav navbar-nav">
-        <!-- <li><a href="{% url 'main:home' %}">Home</a></li> -->
+        <li><a href="{% url 'main:home' %}">Home</a></li>
         <li><a href="{% url 'main:list' %}">Projects</a></li>
 
         {% if user.is_authenticated %}
@@ -95,15 +29,18 @@
               </li>
           
         </ul>
+
         {% else %}
-        <li>
-          <a href="{% url 'main:signin' %}">Login</a>
-        </li>
-        
-        <li>
-          <a href="{% url 'main:signup' %}">Sign Up</a>
-        </li>
+
+              <li>
+                <a href="{% url 'main:signin' %}">Login</a>
+              </li>
+              <li>
+                <a href="{% url 'main:signup' %}">Sign Up</a>
+              </li>
+
         {% endif %}
+
       </ul>
       
       <div class="input-group">
@@ -113,7 +50,6 @@
         </form>
       </div>
 
-  </form>
     </div>
         </div>
       </div>
@@ -122,9 +58,9 @@
     <div class="info">
       <h1>AWWWARDS </h1>
       <div class="meta">
-        <a  href="https://twitter.com/nodws" target="_b" class="author"></a><br>
-        By <a href="https://twitter.com/nodws" target="_b">Rose Okoth</a> on April 5, 2021
+        <a  href="#" target="_b" class="author"></a><br>
+        By <a href="#" target="_b">Rose Okoth</a> on April 5, 2021
       </div>
     </div>
-  </div>
+</div>
   
