--- a/main/templates/project_detail.html
+++ b/main/templates/project_detail.html
@@ -24,22 +24,83 @@
     
 <div class='row'>
     <div class='col-sm-12'>
-    
-    {{ instance.description | linebreaks }}
+        <h4 class="font-weight-bold pt-4">Description:</h4>
+            <p class="text-secondary">{{ instance.description | linebreaks }}</p>
 
-    <button type="button"> <a href='{{ instance.link }}' class ="btn btn-success">Project</a></button>
+        <h4 class="font-weight-bold pt-4">Rating:</h4>
+            <p class="text-secondary">{{ average }} / 10</p>
 
-    <button type="button"> <a href='{% url "main:update" instance.slug %}' class ="btn btn-success">Edit</a></button>
-    
-    <button type="button"> <a href='{% url "main:delete" instance.slug %}' class ="btn btn-danger" onclick="return confirm('Are you sure you want to delete this post?')">Delete</a></button>
+        <h4 class="font-weight-bold pt-4">Live Link:</h4>
+            <p class="text-secondary"><a href='{{ instance.link }}'>{{ instance.link }}</a></p>
+
+            <hr/>
+ 
+    <a href='{% url "main:update" instance.slug %}' class ="btn btn-success">Edit</a>
+
+    <a href='{% url "main:delete" instance.slug %}' class ="btn btn-danger" onclick="return confirm('Are you sure you want to delete this post?')">Delete</a>
 
     
     <hr/>
     <br/>
-    <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"></div>
     
+</div>
+<div class="card">
+    <div class="card-body">
+        <h3 class="font-weight-bold pt-4">Project Reviews</h3>
+        <form action="{% url 'main:review' instance.slug %}" method="POST">
+            {% csrf_token %}
+            <h4 class="font-weight-bold pt-4">Ratings</h4>
+
+            <br/>
+
+            <label for="rating">Design</label>
+            <input type="rating"  id="rangeInput" name="rating" min="0" max="10" value="0" step="0.1" 
+            oninput="amount.value=rangeInput.value">
+            <output name="amount" id="amount" for="rangeInput" >0</output>
+
+            <br/>
+
+            <label for="rating">Usability</label>
+            <input type="rating"  id="rangeInput" name="rating" min="0" max="10" value="0" step="0.1" 
+            oninput="amount.value=rangeInput.value">
+            <output name="amount" id="amount" for="rangeInput" >0</output>
+
+            <br/>
+
+            <label for="rating">Content</label>
+            <input type="rating"  id="rangeInput" name="rating" min="0" max="10" value="0" step="0.1" 
+            oninput="amount.value=rangeInput.value">
+            <output name="amount" id="amount" for="rangeInput" >0</output>
+
+            <hr/>
+
+            <input type="submit" class="btn btn-danger" value="Save Review">
+        </form>
     </div>
 </div>
+
+<hr/>
+
+<div class="card">
+    <div class="card-body">
+        <h3 class="font-weight-bold pt-4">Reviews</h3>
+       <ul>
+           {% for review in reviews %}
+           <br/>
+                <li>By: {{ review.user.user.username}}</li>
+                <br/>
+                <li>Design: {{ review.design_rating}}</li>
+                <br/>
+                <li>Usability: {{ review.usability_rating}}</li>
+                <br/>
+                <li>Content: {{ review.content_rating}}</li>
+                <hr/>
+           {% endfor %}
+       </ul> 
+       <hr/>
+    </div>
+</div>
+
 
 </div>
 {% endblock %}
