edited welcome msg

--- a/main/templates/welcome_user.html
+++ b/main/templates/welcome_user.html
@@ -1,5 +1,12 @@
 <h1>Hello {{name}}</h1>
 
-<h5>Welcome to ....
+<h4>Welcome to Awwwards!</h4>
 
-</h5>
+<p>
+Your account has successfully been created.
+
+You can now share your projects and have them reviewed by other users, as well as review other projects.
+
+Regards,
+The Awwwards Team.
+</p>
